# Humaniod_Robotics_Book

./: .gitignore  CLAUDE.md  README.md  package-lock.json  requirements.txt
backend/: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
backend/.claude/: settings.local.json
backend/.specify/memory/: constitution.md
backend/backend/: .gitignore
backend/scripts/ingestion/: book_ingestion.py
backend/specs/001-rag-chatbot-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
backend/src/core/: cohere_client.py  postgres_client.py  qdrant_client.py
backend/src/models/: book_chunk.py  response.py  stream_chunk.py
backend/src/services/: generation_service.py  qdrant_service.py
backend/vla_integration/config/: isaac_sim_config.yaml  object_detection_config.yaml  vla_pipeline_config.yaml  voice_config.yaml
backend/vla_integration/launch/: action_execution.launch.py  vision_pipeline.launch.py  vla_complete_system.launch.py  vla_voice_pipeline.launch.py  voice_processing.launch.py
backend/vla_integration/msg/: ActionPlan.msg  ExecutionStatus.msg  ObjectDetection.msg  Task.msg  VisionData.msg  VoiceCommand.msg
backend/vla_integration/nodes/: action_execution_service.py  action_executor.py  action_planner.py  action_sequencer.py  action_status_service.py  error_recovery.py  llm_planner.py  object_localizer.py  pipeline_monitor.py  robot_state_monitor.py  safety_validator.py  scene_understanding.py  task_execution_context.py  vision_grounding.py  vision_processor.py  vision_service.py  vla_integration.py  vla_orchestrator.py  vla_pipeline.py  voice_command_service.py  voice_processor.py  voice_to_action_interface.py
backend/vla_integration/srv/: ExecutePlan.srv  LocalizeObject.srv  (+2 more)
backend/widget/: package.json  webpack.config.js
(+252 files in other folders)
